--- a/WS07_Projekti/styles/external.css
+++ b/WS07_Projekti/styles/external.css
@@ -1,8 +1,3 @@
-#valioliiga {
-    font-family: Arial, sans-serif;
-    background-color: #f8f8f8;
-    color: #333333;
-    margin: 0;
-    padding: 0;
-    border-radius: 50%
+.img-fluid {
+    height: 200px;
 }
