--- a/WS07_Projekti/styles/external.css
+++ b/WS07_Projekti/styles/external.css
@@ -1,3 +1,10 @@
 .img-fluid {
     height: 200px;
 }
+
+.footer {
+    text-align: center;
+    padding: 10px;
+    background-color: hsl(0, 76%, 45%);
+    margin-top: 20px;
+}
